- fixed gc - add builtins